simple_flask_app/create_flask_deployment_envsecret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: flask-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: flask-pod
  template: # pod defination
    metadata: 
      name: my-pod
      labels:
        app: backend
        pod-label: flask-pod
    spec:
      # volumes:
      # - name: cert-volume
      #   secret:
      #     secretName: "secret-nginx-cert" 
      containers:
      - name: flask-container
        image: rapidfort/flaskapp:latest
        ports:
        - containerPort: 8555
        # - containerPort: 8556
        # volumeMounts:
        # - mountPath: "/certs"
        #   name: cert-volume 
        volumeMounts:
          - name: flask-pvc-storage
            mountPath: /application
        command: ["/bin/sh", "-c"]
        args: ["ls; echo $(SECRET_USERNAME);python app_simple.py"]
        
      volumes:
        - name: flask-pvc-storage
          persistentVolumeClaim:
            claimName:  flask-pvc
