simple_flask_app/create_mysql_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: NodePort
  ports:
  - port: 3306        # service port
    targetPort: 3306    # pod port
    protocol: TCP
    name: service-http
    nodePort: 31000   # cổng NODE ánh xạ vào cổng dịch vụ (chỉ chọn 30000-32767)

  # - port: 443       # service port
  #   targetPort: 443 # pod port
  #   protocol: TCP
  #   name: service-https
    # nodePort: 31443
  # Chú ý đúng với Label của POD tại Deployment
  selector:
    pod-label: mysql-pod
