simple_flask_app/create_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #     - phamvandan.test
  #     secretName: secret-nginx-cert
  rules:
  - host: phamvandan.test
    http:
      paths:
      - path: /simple-flask-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: my-flask-service
            port:
              number: 80
      - path: /second-flask-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: my-flask-service-2
            port:
              number: 80
              
      # - path: /foo
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: my-nginx-service
      #       port:
      #         number: 80
